updated artifactid as watstheday2day
updated artifactid as watstheday2day

--- a/watstheday2daybootstrap/pom.xml
+++ b/watstheday2daybootstrap/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>mulshankar13</groupId>
-  <artifactId>watstheday2daybootstrap</artifactId>
+  <artifactId>watstheday2day</artifactId>
   <packaging>war</packaging>
   <version>1.0</version>
   <name>watstheday2daybootstrap Maven Webapp</name>
@@ -27,6 +27,6 @@
 </dependency>
   </dependencies>
   <build>
-    <finalName>watstheday2daybootstrap</finalName>
+    <finalName>watstheday2day</finalName>
   </build>
 </project>
